DAY 05-ingress/example.com-ingress/video-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-deployment
  labels:
    app: video
spec:
  replicas: 2
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
      - name: video-container
        image: your-dockerhub/video:latest  # Replace with your image
        ports:
        - containerPort: 5000
