DAY 05-ingress/example.com-ingress/images-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: images-service
spec:
  selector:
    app: images
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
