DAY 05-ingress/example.com-ingress/video-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  selector:
    app: video
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
