DAY 05-ingress/example.com-ingress/Ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123456789012:certificate/abc-123...
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: images-service
                port:
                  number: 80
          - path: /video
            pathType: Prefix
            backend:
              service:
                name: video-service
                port:
                  number: 80
